# LearnPydanticAI

./: README.md  pyproject.toml
src/LearnPydanticAI/: agent.py  app.py  data.py  dependecies.py  model.py  pm_agent.py  session.py  task_agent.py
